Update new content

--- a/main/widgets/services.html
+++ b/main/widgets/services.html
@@ -6,7 +6,7 @@
 
     <!-- Start Service #1 -->
     <div class="service-separate" id="service1">
-      <h3>相続・遺言関連業務</h3>
+      <h3>相続・遺言に関する業務</h3>
       <strong class="spacetop">相続のお手続き</strong>
       <ul>
         <li>預貯金の相続（解約（払戻）等手続）</li>
@@ -17,10 +17,11 @@
         <li>自筆証書遺言検認の申立書作成</li>
         <li>相続放棄の申立書作成</li>
         <li>遺産分割調停の申立書作成</li>
+        <p>・・・・・など</p>
       </ul>
       <p class="boxtext">
         介護、ご葬儀の取りしきりなど心身共に緊張した日々を経て、さらに様々な相続手続が必要になり、疲弊されている方が少なくありません。<br/>
-        まくしたてるようなことはせず、ゆっくりお話しをお伺いします。安心してお任せ
+        まくしたてるようなことはせず、ゆっくりお話しをお伺いします。安心してお任せください。
       </p>
       <strong class="spacetop">遺言のご相談</strong>
       <ul>
@@ -28,6 +29,7 @@
         <li>法務局所管の自筆証書遺言保管制度による自筆証書遺言について</li>
         <li>公正証書遺言作成について</li>
         <li>遺言公正証書有無の検索</li>
+        <p>・・・・・など</p>
       </ul>
       <p class="boxtext">
         遺言のご相談、遺言内容の調査、精査などをお手伝いいたします。<br/>
@@ -46,23 +48,27 @@
         <li>遺言に基づき相続する場合</li>
         <li>法定相続分で相続する場合</li>
         <li>調停、判決に基づき相続する場合</li>
+        <p>・・・・・など</p>
       </ul>
       <strong class="spacetop">住所、氏名の変更（更正）登記</strong>
       <ul>
         <li>住所移転によって住所を変更した場合</li>
         <li>婚姻、離婚によって住所や氏名の変更をした場合</li>
         <li>変更（更正）事項があるが登記を長年していない場合</li>
+        <p>・・・・・など</p>
       </ul>
       <strong class="spacetop">抵当権抹消登記</strong>
       <ul>
         <li>住宅ローンの返済が完了した場合</li>
         <li>住宅ローンの借り換えをした場合</li>
         <li>抵当権付きの不動産を相続し、抹消登記未了の場合</li>
+        <p>・・・・・など</p>
       </ul>
       <strong class="spacetop">贈与登記</strong>
       <ul>
         <li>ご家族間の贈与（生前贈与など</li>
         <li>調停、判決に基づく場合</li>
+        <p>・・・・・など</p>
       </ul>
       <strong class="spacetop">売買登記</strong>
       <ul>
@@ -70,12 +76,14 @@
         <li>借地を地主さんより買い上げる場合</li>
         <li>ご家族間の売買</li>
         <li>調停、判決に基づく場合</li>
+        <p>・・・・・など</p>
       </ul>
       <strong class="spacetop">離婚における財産分与登記</strong>
       <ul>
         <li>当事者の協議に基づく場合</li>
         <li>公正証書契約に基づく場合</li>
         <li>調停、判決に基づく場合</li>
+        <p>・・・・・など</p>
       </ul>
     </div>
     <!-- End Service #2 -->
@@ -95,25 +103,19 @@
         <li>辞任する方がいる場合</li>
         <li>お亡くなりになった方がいる場合</li>
         <li>任期切れのまま登記をしていない場合</li>
-      </ul>
-      <strong class="spacetop">役員の変更</strong>
-      <ul>
-        <li>改選期が到来した場合</li>
-        <li>新しい役員を迎えたい場合</li>
-        <li>辞任する方がいる場合</li>
-        <li>お亡くなりになった方がいる場合</li>
-        <li>任期切れのまま登記をしていない場合</li>
+        <p>・・・・・など</p>
       </ul>
       <strong class="spacetop">定款（登記事項）の変更</strong>
       <ul>
         <li>商号（名称）の変更</li>
         <li>事業目的の変更</li>
         <li>取締役会や監査役の設置または廃止</li>
+        <p>・・・・・など</p>
       </ul>
       <strong class="spacetop">増資・減資</strong>
       <strong>解散・清算</strong>
       <strong>本店の移転</strong>
-      <strong>子会社の設立</strong>
+      <strong>子会社の設立 ・・・・・など</strong>
       <p class="boxtext">時間を有効活用されたい起業家様、業務に専念されたい経営者様、会社法務ご担当者様
         などの皆様へ、登記の実務家としてサポートさせていただいております。</p>
     </div>
@@ -121,13 +123,13 @@
 
     <!-- Start Service #4 -->
     <div class="service-separate" id="service4">
-      <h3>コンプライアンス業務</h3>
-      <h3>(経営者・起業家・法務ご担当の方)</h3>
+      <h3>コンプライアンスに関する業務</h3>
+      <h3>（経営者・起業家・法務ご担当の方）</h3>
       <strong class="spacetop">最新の法令に対応した定款の整備・変更</strong>
       <strong>備付議事録の作成、ご相談</strong>
       <strong>各種規則・規定の作成、ご相談</strong>
       <strong>通常法務の継続的サポ－ト（顧問契約型）</strong>
-      <strong>法務のご相談　</strong>
+      <strong>法務のご相談　・・・・・など</strong>
     </div>
     <!-- End Service #4 -->
 
@@ -136,7 +138,7 @@
       <h3>後見、家族信託に関する業務</h3>
       <strong class="spacetop">成年後見（法定後見、保佐、補助）のご相談、申立書の作成</strong>
       <strong>任意後見契約のご相談、契約書の起案</strong>
-      <strong>家族信託契約のご相談、契約書の起案</strong>
+      <strong>家族信託契約のご相談、契約書の起案 ・・・・・など</strong>
       <p class="boxtext">ご自分やご家族の、現在または近い将来に不安をお持ちの方などがご利用されています。<br/>
         現在の状況で、できる方法とできないことをご一緒に整理し、少しでも安心につながるように心がけています。</p>
     </div>
