New service icon + css + new favicon

--- a/main/widgets/header.html
+++ b/main/widgets/header.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <title>横浜市青葉区の司法書士佐藤淑江事務所</title>
+  <link rel="icon" type="image/x-icon" href="main/images/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="description" content="横浜市青葉区の司法書士佐藤淑江事務所">
   <meta name="keywords" content="司法書士, 横浜, 青葉区, 登記, 法務, 市ヶ尾">
