--- a/main/widgets/services.html
+++ b/main/widgets/services.html
@@ -124,7 +124,7 @@
     <!-- Start Service #4 -->
     <div class="service-separate" id="service4">
       <h3>コンプライアンスに関する業務</h3>
-      <h3>（経営者・起業家・法務ご担当の方）</h3>
+      <h3>(経営者・起業家・法務ご担当の方)</h3>
       <strong class="spacetop">最新の法令に対応した定款の整備・変更</strong>
       <strong>備付議事録の作成、ご相談</strong>
       <strong>各種規則・規定の作成、ご相談</strong>
