--- a/main/widgets/nav.html
+++ b/main/widgets/nav.html
@@ -32,10 +32,10 @@
           <a href="#customer" class="smoothScroll">当事務所をご利用のお客様</a>
         </li>
         <li>
-          <a href="#feedback" class="smoothScroll">個人情報</a>
+          <a href="#personal" class="smoothScroll">個人情報</a>
         </li>
         <li>
-          <a href="#personal" class="smoothScroll">アクセス</a>
+          <a href="#map" class="smoothScroll">アクセス</a>
         </li>
         <li>
           <a href="#contact" class="smoothScroll">お問い合わせ</a>
