--- a/main/widgets/nav.html
+++ b/main/widgets/nav.html
@@ -26,13 +26,13 @@
           <a href="#greeting" class="smoothScroll">ごあいさつ</a>
         </li>
         <li>
-          <a href="#services" class="smoothScroll">サービス</a>
+          <a href="#services" class="smoothScroll">業務内容</a>
         </li>
         <li>
           <a href="#customer" class="smoothScroll">当事務所をご利用のお客様</a>
         </li>
         <li>
-          <a href="#personal" class="smoothScroll">個人情報</a>
+          <a href="#personal" class="smoothScroll">個人情報の取扱い</a>
         </li>
         <li>
           <a href="#map" class="smoothScroll">アクセス</a>
