--- a/main/widgets/services.html
+++ b/main/widgets/services.html
@@ -66,7 +66,7 @@
       </ul>
       <strong class="spacetop">贈与登記</strong>
       <ul>
-        <li>ご家族間の贈与（生前贈与など</li>
+        <li>ご家族間の贈与（生前贈与など）</li>
         <li>調停、判決に基づく場合</li>
         <p>・・・・・など</p>
       </ul>
